@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021 SUSE LLC
+ * Copyright (c) 2021--2025 SUSE LLC
  *
  * This software is licensed to you under the GNU General Public License,
  * version 2 (GPLv2). There is NO WARRANTY for this software, express or
@@ -7,10 +7,6 @@
  * FOR A PARTICULAR PURPOSE. You should have received a copy of GPLv2
  * along with this software; if not, see
  * http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt.
- *
- * Red Hat trademarks are not licensed under GPLv2. No permission is
- * granted to use or replicate Red Hat trademarks that are incorporated
- * in this software or its documentation.
  */
 package com.redhat.rhn.taskomatic.task;
 
@@ -41,10 +37,10 @@ import org.quartz.JobExecutionContext;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.ThreadLocalRandom;
 
 
@@ -63,13 +59,12 @@ public class ForwardRegistrationTask extends RhnJavaJob {
     public void execute(JobExecutionContext arg0) {
         if (!ConfigDefaults.get().isForwardRegistrationEnabled()) {
             NotificationMessage lastNotification = UserNotificationFactory
-                    .getLastNotificationMessageByType(NotificationType.SCCOptOutWarning);
+                    .getLastNotificationMessageByType(NotificationType.SCC_OPT_OUT_WARNING);
 
             if (lastNotification == null || lastNotification.getCreated().before(DateUtils.addMonths(new Date(), -3))) {
                 NotificationMessage notificationMessage =
                         UserNotificationFactory.createNotificationMessage(new SCCOptOutWarning());
-                UserNotificationFactory.storeNotificationMessageFor(notificationMessage,
-                        Collections.singleton(RoleFactory.ORG_ADMIN), Optional.empty());
+                UserNotificationFactory.storeNotificationMessageFor(notificationMessage, Set.of(RoleFactory.ORG_ADMIN));
             }
 
             if (GlobalInstanceHolder.PAYG_MANAGER.isPaygInstance() &&
