@@ -19,25 +19,34 @@ import static com.suse.manager.webui.utils.SparkApplicationHelper.success;
 import static com.suse.manager.webui.utils.SparkApplicationHelper.withProductAdmin;
 import static spark.Spark.delete;
 import static spark.Spark.get;
-import static spark.Spark.patch;
 import static spark.Spark.post;
 
 import com.redhat.rhn.common.localization.LocalizationService;
+import com.redhat.rhn.domain.credentials.HubSCCCredentials;
 import com.redhat.rhn.domain.user.User;
 import com.redhat.rhn.frontend.listview.PageControl;
 import com.redhat.rhn.taskomatic.TaskomaticApiException;
 
 import com.suse.manager.hub.HubManager;
 import com.suse.manager.hub.InvalidResponseException;
+import com.suse.manager.hub.migration.IssMigrator;
+import com.suse.manager.hub.migration.IssMigratorFactory;
 import com.suse.manager.model.hub.AccessTokenDTO;
 import com.suse.manager.model.hub.IssAccessToken;
 import com.suse.manager.model.hub.IssRole;
 import com.suse.manager.model.hub.IssServer;
 import com.suse.manager.model.hub.TokenType;
+import com.suse.manager.model.hub.UpdatableServerData;
+import com.suse.manager.model.hub.migration.MigrationResult;
+import com.suse.manager.model.hub.migration.MigrationResultCode;
+import com.suse.manager.model.hub.migration.SlaveMigrationData;
 import com.suse.manager.webui.controllers.ECMAScriptDateAdapter;
+import com.suse.manager.webui.controllers.admin.beans.ChannelSyncModel;
 import com.suse.manager.webui.controllers.admin.beans.CreateTokenRequest;
 import com.suse.manager.webui.controllers.admin.beans.HubRegisterRequest;
-import com.suse.manager.webui.controllers.admin.beans.PeripheralResponse;
+import com.suse.manager.webui.controllers.admin.beans.MigrationEntryDto;
+import com.suse.manager.webui.controllers.admin.beans.PeripheralListData;
+import com.suse.manager.webui.controllers.admin.beans.SyncChannelRequest;
 import com.suse.manager.webui.controllers.admin.beans.UpdateRootCARequest;
 import com.suse.manager.webui.controllers.admin.beans.ValidityRequest;
 import com.suse.manager.webui.utils.FlashScopeHelper;
@@ -64,6 +73,8 @@ import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import javax.net.ssl.SSLException;
 
@@ -77,6 +88,8 @@ public class HubApiController {
 
     private final HubManager hubManager;
 
+    private final IssMigratorFactory migratorFactory;
+
     private static final Gson GSON = new GsonBuilder()
         .registerTypeAdapter(Date.class, new ECMAScriptDateAdapter())
         .serializeNulls()
@@ -86,34 +99,43 @@ public class HubApiController {
      * Default constructor
      */
     public HubApiController() {
-        this(new HubManager());
+        this(new HubManager(), new IssMigratorFactory());
     }
 
     /**
      * Creates an instance with the given dependencies
      * @param hubManagerIn the hub manager
+     * @param migratorFactoryIn the migrator factory
      */
-    public HubApiController(HubManager hubManagerIn) {
+    public HubApiController(HubManager hubManagerIn, IssMigratorFactory migratorFactoryIn) {
         this.hubManager = hubManagerIn;
+        this.migratorFactory = migratorFactoryIn;
     }
 
     /**
      * initialize all the API Routes for the ISSv3 support
      */
     public void initRoutes() {
-        // Hub management
+        get("/manager/api/admin/hub/peripherals", withProductAdmin(this::listPaginatedPeripherals));
+        post("/manager/api/admin/hub/peripherals", withProductAdmin(this::registerPeripheral));
+        delete("/manager/api/admin/hub/peripherals/:id", withProductAdmin(this::deletePeripheral));
+        post("/manager/api/admin/hub/peripherals/:id/root-ca", withProductAdmin(this::updatePeripheralRootCA));
+        delete("/manager/api/admin/hub/peripherals/:id/root-ca", withProductAdmin(this::removePeripheralRootCA));
+        post("/manager/api/admin/hub/peripherals/:id/credentials", withProductAdmin(this::refreshCredentials));
+        get("/manager/api/admin/hub/peripherals/:id/sync-channels",
+                withProductAdmin(this::getPeripheralChannelSyncStatus));
+        post("/manager/api/admin/hub/peripherals/:id/sync-channels",
+                withProductAdmin(this::syncChannelsToPeripheral));
+        delete("/manager/api/admin/hub/:id", withProductAdmin(this::deleteHub));
+        post("/manager/api/admin/hub/:id/root-ca", withProductAdmin(this::updateHubRootCA));
+        delete("/manager/api/admin/hub/:id/root-ca", withProductAdmin(this::removeHubRootCA));
+        post("/manager/api/admin/hub/migrate/v1", withProductAdmin(this::migrateFromV1));
+        post("/manager/api/admin/hub/migrate/v2", withProductAdmin(this::migrateFromV2));
         get("/manager/api/admin/hub/access-tokens", withProductAdmin(this::listTokens));
         post("/manager/api/admin/hub/access-tokens", withProductAdmin(this::createToken));
         post("/manager/api/admin/hub/access-tokens/:id/validity", withProductAdmin(this::setAccessTokenValidity));
         delete("/manager/api/admin/hub/access-tokens/:id", withProductAdmin(this::deleteAccessToken));
-        get("/manager/api/admin/hub/peripherals", withProductAdmin(this::listPaginatedPeripherals));
-        post("/manager/api/admin/hub/peripherals", withProductAdmin(this::registerPeripheral));
-        get("/manager/api/admin/hub/peripherals/:id", withProductAdmin(this::pass));
-        patch("/manager/api/admin/hub/peripherals/:id", withProductAdmin(this::pass));
-        delete("/manager/api/admin/hub/peripherals/:id", withProductAdmin(this::deletePeripheral));
-        delete("/manager/api/admin/hub/:id", withProductAdmin(this::deleteHub));
-        post("/manager/api/admin/hub/:id/root-ca", withProductAdmin(this::updateHubRootCA));
-        delete("/manager/api/admin/hub/:id/root-ca", withProductAdmin(this::removeHubRootCA));
+
     }
 
     private String deleteHub(Request request, Response response, User user) {
@@ -125,25 +147,90 @@ public class HubApiController {
     }
 
     private String updateHubRootCA(Request request, Response response, User user) {
-        UpdateRootCARequest updateRequest;
-        try {
-            updateRequest = validateUpdateRootCARequest(GSON.fromJson(request.body(), UpdateRootCARequest.class));
-        }
-        catch (CertificateException ex) {
-            LOGGER.error("Unable to parse the specified certificate", ex);
-            return badRequest(response, LOC.getMessage("hub.invalid_root_ca"));
-        }
-        catch (JsonSyntaxException ex) {
-            LOGGER.error("Unable to parse JSON request", ex);
-            return badRequest(response, LOC.getMessage("hub.invalid_request"));
-        }
-
-        return updateServerRootCA(request, response, user, IssRole.HUB, updateRequest.getRootCA());
+        return updateServerRootCA(request, response, user, IssRole.HUB, true);
     }
 
     private String removeHubRootCA(Request request, Response response, User user) {
-        // Perform the update using null as value
-        return updateServerRootCA(request, response, user, IssRole.HUB, null);
+        return updateServerRootCA(request, response, user, IssRole.HUB, false);
+    }
+
+    private String updatePeripheralRootCA(Request request, Response response, User user) {
+        return updateServerRootCA(request, response, user, IssRole.PERIPHERAL, true);
+    }
+
+    private String removePeripheralRootCA(Request request, Response response, User user) {
+        return updateServerRootCA(request, response, user, IssRole.PERIPHERAL, false);
+    }
+
+    private String refreshCredentials(Request request, Response response, User user) {
+        long peripheralId = Long.parseLong(request.params("id"));
+
+        try {
+            HubSCCCredentials newCredentials = hubManager.regenerateCredentials(user, peripheralId);
+            return success(response, ResultJson.success(newCredentials.getUsername()));
+        }
+        catch (IllegalArgumentException ex) {
+            LOGGER.warn("Unable to refresh credentials: {}", ex.getMessage());
+            return notFound(response, LOC.getMessage("hub.cannot_find_server"));
+        }
+        catch (CertificateException ex) {
+            LOGGER.error("Unexpected error while processing root certificate #{}", peripheralId, ex);
+            return internalServerError(response, LOC.getMessage("hub.unexpected_error_root_ca"));
+        }
+        catch (IOException ex) {
+            LOGGER.error("Error while attempting to connect to remote server #{}", peripheralId, ex);
+            return internalServerError(response, LOC.getMessage("hub.error_connecting_remote"));
+        }
+    }
+
+    private String getPeripheralChannelSyncStatus(Request request, Response response, User satAdmin) {
+        long peripheralId = Long.parseLong(request.params("id"));
+        try {
+            ChannelSyncModel syncModel = hubManager.getChannelSyncModelForPeripheral(satAdmin, peripheralId);
+            return json(response, GSON.toJson(syncModel));
+        }
+        catch (CertificateException eIn) {
+            LOGGER.error("Unable to parse the specified root certificate for the peripheral {}", peripheralId, eIn);
+            return badRequest(response, LOC.getMessage("hub.invalid_root_ca"));
+        }
+        catch (IOException eIn) {
+            LOGGER.error("Error while attempting to connect to peripheral server {}", peripheralId, eIn);
+            return internalServerError(response, LOC.getMessage("hub.error_connecting_remote"));
+        }
+    }
+
+    /**
+     * Unified method to sync and desync channels to/from a peripheral
+     */
+    private String syncChannelsToPeripheral(Request request, Response response, User satAdmin) {
+        try {
+            long peripheralId = Long.parseLong(request.params("id"));
+            SyncChannelRequest syncRequest = GSON.fromJson(request.body(), SyncChannelRequest.class);
+            if (syncRequest == null) {
+                return badRequest(response, LOC.getMessage("hub.invalid_request"));
+            }
+            hubManager.syncChannelsByLabelForPeripheral(
+                                satAdmin,
+                                peripheralId,
+                    syncRequest.getChannelsToAdd(),
+                    syncRequest.getChannelsToRemove()
+            );
+            return success(response);
+        }
+        catch (NumberFormatException e) {
+            LOGGER.error("Invalid peripheral id provided");
+            return badRequest(response, LOC.getMessage("hub.invalid_id"));
+        }
+        catch (CertificateException e) {
+            LOGGER.error("Unable to parse the specified root certificate for the peripheral {}",
+                    request.params("id"), e);
+            return badRequest(response, LOC.getMessage("hub.invalid_root_ca"));
+        }
+        catch (IOException e) {
+            LOGGER.error("Error while attempting to connect to peripheral server {}",
+                    request.params("id"), e);
+            return internalServerError(response, LOC.getMessage("hub.error_connecting_remote"));
+        }
     }
 
     private String registerPeripheral(Request request, Response response, User satAdmin) {
@@ -153,7 +240,7 @@ public class HubApiController {
             issRequest = validateRegisterRequest(GSON.fromJson(request.body(), HubRegisterRequest.class));
         }
         catch (JsonSyntaxException ex) {
-            LOGGER.error("Unable to parse JSON request", ex);
+            LOGGER.error("Unable to parse JSON request {}", request, ex);
             return badRequest(response, LOC.getMessage("hub.invalid_request"));
         }
 
@@ -216,10 +303,13 @@ public class HubApiController {
     private String listPaginatedPeripherals(Request request, Response response, User satAdmin) {
         PageControlHelper pageHelper = new PageControlHelper(request);
         PageControl pc = pageHelper.getPageControl();
-        long totalSize = hubManager.countRegisteredPeripherals(satAdmin);
-        List<PeripheralResponse> peripherals = hubManager.listRegisteredPeripherals(satAdmin, pc).stream()
-            .map(PeripheralResponse::fromIssEntity).toList();
-        TypeToken<PagedDataResultJson<PeripheralResponse, Long>> type = new TypeToken<>() { };
+        long totalSize = hubManager.countRegisteredPeripherals(satAdmin, pc);
+
+        List<PeripheralListData> peripherals = hubManager.listRegisteredPeripherals(satAdmin, pc).stream()
+            .map(PeripheralListData::new)
+            .toList();
+
+        TypeToken<PagedDataResultJson<PeripheralListData, Long>> type = new TypeToken<>() { };
         return json(GSON, response, new PagedDataResultJson<>(peripherals, totalSize, Collections.emptySet()), type);
     }
 
@@ -310,7 +400,7 @@ public class HubApiController {
         long serverId = Long.parseLong(request.params("id"));
         IssServer server = hubManager.findServer(user, serverId, issRole);
         if (server == null) {
-            return badRequest(response, LOC.getMessage("hub.cannot_find_server"));
+            return notFound(response, LOC.getMessage("hub.cannot_find_server"));
         }
 
         try {
@@ -324,18 +414,92 @@ public class HubApiController {
         return success(response);
     }
 
-    private String updateServerRootCA(Request request, Response response, User user, IssRole role, String rootCA) {
+    private String updateServerRootCA(Request request, Response response, User user, IssRole role, boolean isUpdate) {
+        String rootCA;
+
+        if (isUpdate) {
+            // If we are performing an update we need to parse the request
+            try {
+                UpdateRootCARequest updateRequest = GSON.fromJson(request.body(), UpdateRootCARequest.class);
+                rootCA = validateUpdateRootCARequest(updateRequest).getRootCA();
+            }
+            catch (CertificateException ex) {
+                LOGGER.error("Unable to parse the specified certificate", ex);
+                return badRequest(response, LOC.getMessage("hub.invalid_root_ca"));
+            }
+            catch (JsonSyntaxException ex) {
+                LOGGER.error("Unable to parse JSON request", ex);
+                return badRequest(response, LOC.getMessage("hub.invalid_request"));
+            }
+        }
+        else {
+            // If it's a deletion, just set the value to null
+            rootCA = null;
+        }
+
         long serverId = Long.parseLong(request.params("id"));
         IssServer server = hubManager.findServer(user, serverId, role);
         if (server == null) {
-            return badRequest(response, LOC.getMessage("hub.cannot_find_server"));
+            return notFound(response, LOC.getMessage("hub.cannot_find_server"));
         }
 
-        // Collections.singletonMap() is used in place of Map.of() because it allows null as value
-        Map<String, String> dataMap = Collections.singletonMap("root_ca", rootCA);
-        hubManager.updateServerData(user, server.getFqdn(), role, dataMap);
+        try {
+            // Collections.singletonMap() is used in place of Map.of() because it allows null as value
+            UpdatableServerData data = new UpdatableServerData(Collections.singletonMap("root_ca", rootCA));
+            hubManager.updateServerData(user, server.getFqdn(), role, data);
+        }
+        catch (TaskomaticApiException e) {
+            return internalServerError(response, LOC.getMessage("hub.cannot_refresh_certificate"));
+        }
 
         return success(response);
+    }
+
+    private String migrateFromV1(Request request, Response response, User user) {
+        List<MigrationEntryDto> migrationEntries = GSON.fromJson(request.body(),
+            new TypeToken<List<MigrationEntryDto>>() { }.getType());
+
+        // Map the entries to a map of SlaveMigrationData
+        Map<String, SlaveMigrationData> migrationData = migrationEntries.stream()
+            .filter(entry -> entry.isSelected() && !entry.isDisabled())
+            .map(entry -> new SlaveMigrationData(entry.getFqdn(), entry.getAccessToken(), entry.getRootCA()))
+            .collect(Collectors.toMap(SlaveMigrationData::fqdn, Function.identity()));
+
+        // Run migration from v1
+        IssMigrator migrator = migratorFactory.createFor(user);
+        return performMigration(request, response, migrationData, 1, data -> migrator.migrateFromV1(data));
+    }
+
+    private String migrateFromV2(Request request, Response response, User user) {
+        List<MigrationEntryDto> migrationEntries = GSON.fromJson(request.body(),
+            new TypeToken<List<MigrationEntryDto>>() { }.getType());
+
+        // Map the entries to a list of SlaveMigrationData
+        List<SlaveMigrationData> migrationData = migrationEntries.stream()
+            .filter(entry -> entry.isSelected() && !entry.isDisabled())
+            .map(entry -> new SlaveMigrationData(entry.getFqdn(), entry.getAccessToken(), entry.getRootCA()))
+            .toList();
+
+        // Run migration from v2
+        IssMigrator migrator = migratorFactory.createFor(user);
+        return performMigration(request, response, migrationData, 2, data ->  migrator.migrateFromV2(data));
+    }
+
+    private <T> String performMigration(Request request, Response response, T migrationData, int version,
+                                        Function<T, MigrationResult> migration) {
+        try {
+            MigrationResult result = migration.apply(migrationData);
+
+            if (result.getResultCode() == MigrationResultCode.SUCCESS) {
+                FlashScopeHelper.flash(request, LOC.getMessage("hub.migration_success", version));
+            }
+
+            return success(response, result);
+        }
+        catch (Exception ex) {
+            LOGGER.error("Unexpected error while migrating the servers", ex);
+            return internalServerError(response, LOC.getMessage("hub.unexpected_error_migrating", ex.getMessage()));
+        }
     }
 
     private static HubRegisterRequest validateRegisterRequest(HubRegisterRequest parsedRequest) {
@@ -384,9 +548,5 @@ public class HubApiController {
             .orElseThrow(() -> new JsonSyntaxException("rootCA is empty"));
 
         return request;
-    }
-
-    private String pass(Request request, Response response, User user) {
-        return success(response, ResultJson.success(request.requestMethod() + ": " + request.uri()));
     }
 }
